--- a/50_50.html
+++ b/50_50.html
@@ -13,21 +13,24 @@
     <header> <a href="index.html" class="logo-container">
         <img class="logo" src="images/logo.PNG" alt="logo">
         <img class="naam" src="images/naam.png" alt="naam" >
-        <nav>
-            </a>
+        </a> 
+        <nav> 
             <ul class="menu">
                 <li class="dropdown">
                     <button class="dropbtn">
                         <img src="images/menu.png" alt="menu" class="menu-icon">
                     </button>
-                    <div class="dropdown-content">
-                        <a href="index.html">Home</a>
-                        <a href="50_50.html">50/50</a>
-                        <a href="diy.html">DIY ideën</a>
-                    </div>
-                </li>
-            </ul>
+                     class="dropdown-content">
+                        <li href="index.html">Home</a>
+                        <li href="50_50.html">50/50</a>
+                        <li href="diy.html">DIY ideën</a>
+             </ul>
+
         </nav>
     </header>
+
+    <main>
+     <h1>Wat maakt de 50/50 budget store uniek.</h1>
+    </main>
 
 </body>
