--- a/diy.html
+++ b/diy.html
@@ -19,12 +19,13 @@
                     <button class="dropbtn">
                         <img src="images/menu.png" alt="menu" class="menu-icon">
                     </button>
-                     class="dropdown-content">
-                        <li href="index.html">Home</a>
-                        <li href="50_50.html">50/50</a>
-                        <li href="diy.html">DIY ideën</a>
-             </ul>
-
+                    <div class="dropdown-content">
+                        <a href="index.html">Home</a>
+                        <a href="50_50.html">50/50</a>
+                        <a href="diy.html">DIY ideën</a>
+                    </div>
+                </li>
+            </ul>
         </nav>
     </header>
 
