--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
                  <img class="recycle" src="images/recycle.png" alt="winkel">
 
-          <div class="text-block">     
+          <div class="text-block"> 
+            <h2>Wat is de 50/50 store</h2>    
              <p> De 50/50 Budget Store is een winkel van het leger des heils.
              In deze kringloop winkel werken naast het personeel waar mijn vader bij hoord ook vrijwiligers. Ook dakloze die bekend zijn bij het leger des heils kunnen bij deze winkel terecht voor de dagbesteding. Veel grote bedrijven geven een bedrage aan de 50/50 store. Zo doneerdt de GVB in Amsterdam de gevonden voorwerpen na een bepaalde datum aan de winkel. </p>
              <a href="50_50.html" class="lees-meer-knop">Lees meer</a>
