--- a/50_50.html
+++ b/50_50.html
@@ -39,7 +39,7 @@
                 4 vrijwilligers en 2 door de gemeente gesubsidieerde ervaringsdeskundigen. 
                 De pedagogische medewerkers zijn verantwoordelijk voor de begeleiding en rapportage van de deelnemers. 
                 De gesubsidieerde medewerkers zijn mede verantwoordelijk voor de winkel en het sorteerproces van de goederen. 
-                De vrijwilligers zijn verantwoordelijk voor de verkoop en winkelbevoorrading en pricing.
+                De vrijwilligers zijn verantwoordelijk voor de verkoop, winkelbevoorrading en pricing.
             </p>
         </div>
         <img class="corner-foto" src="images/werknemer.png" alt="werknemer tekening">
