--- a/index.html
+++ b/index.html
@@ -30,16 +30,20 @@
     </header>    
 
     <main>
-        <h1 class="title">De 50/50 budget store</h1>
-        
-        <div class="image-container">
+        <section>
+            <h1 class="title">De 50/50 budget store</h1>
+        </section>
+
+        <section class="image-container">
             <img class="winkel" src="images/winkel1.jpg" alt="foto van winkel">
             <h2 class="overlap-text">Maak kennis met de 50/50 Budget Store in Amsterdam</h2>
-        </div>
+        </section>
 
-        <img class="recycle" src="images/recycle.png" alt="recycle icoon">
+        <section class="recycle-container">
+            <img class="recycle" src="images/recycle.png" alt="recycle icoon">
+        </section>
 
-        <div class="text-block"> 
+        <section class="text-block"> 
             <h2>Wat is de 50/50 store</h2>    
             <p>
                 De 50/50 Budget Store is een winkel van het leger des heils.
@@ -49,7 +53,7 @@
                 voorwerpen na een bepaalde datum aan de winkel.
             </p>
             <a href="50_50.html" class="lees-meer-knop">Lees meer</a>
-        </div>
+        </section>
     </main>
 
     <footer>
